--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -68,6 +68,7 @@ bCaptureMouseOnLaunch=True
 bEnableLegacyInputScales=True
 bEnableMotionControls=True
 bFilterInputByPlatformUser=False
+bEnableInputDeviceSubsystem=True
 bShouldFlushPressedKeysOnViewportFocusLost=True
 bEnableDynamicComponentInputBinding=True
 bAlwaysShowTouchInterface=False
@@ -78,50 +79,6 @@ DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 DefaultViewportMouseLockMode=LockOnCapture
 FOVScale=0.011110
 DoubleClickTime=0.200000
-+ActionMappings=(ActionName="[HE]Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
-+ActionMappings=(ActionName="[HE]Crouch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftControl)
-+ActionMappings=(ActionName="[HE]LeanLeft",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
-+ActionMappings=(ActionName="[HE]LeanRight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="[HE]Run",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
-+ActionMappings=(ActionName="[HE]Focus",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
-+ActionMappings=(ActionName="[HE]Use",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="[HE]AlternativeUse",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=RightMouseButton)
-+ActionMappings=(ActionName="[HE]Pistol",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=One)
-+ActionMappings=(ActionName="[HE]Fire",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
-+ActionMappings=(ActionName="[HE]Reload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
-+ActionMappings=(ActionName="[HE]Glowstick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
-+ActionMappings=(ActionName="[HE]Glowstick",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=G)
-+ActionMappings=(ActionName="[HE]Flashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
-+ActionMappings=(ActionName="[HE]Flashlight",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F)
-+ActionMappings=(ActionName="[HE]Lighter",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Four)
-+ActionMappings=(ActionName="[HE]Lighter",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Z)
-+ActionMappings=(ActionName="[HE]Torch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Five)
-+ActionMappings=(ActionName="[HE]Torch",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
-+ActionMappings=(ActionName="[HE]NightVision",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Six)
-+ActionMappings=(ActionName="[HE]NightVision",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=V)
-+ActionMappings=(ActionName="[HE]Cameroid",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Seven)
-+ActionMappings=(ActionName="[HE]Cameroid",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=C)
-+ActionMappings=(ActionName="[HE]NextEquipment",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollUp)
-+ActionMappings=(ActionName="[HE]PrevEquipment",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MouseScrollDown)
-+ActionMappings=(ActionName="[HE]Unequip",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Quote)
-+ActionMappings=(ActionName="[HE]Inventory",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Tab)
-+ActionMappings=(ActionName="[HE]Examine",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=E)
-+ActionMappings=(ActionName="[HE]PanItem",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MiddleMouseButton)
-+ActionMappings=(ActionName="[HE]RotateObject",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
-+ActionMappings=(ActionName="[HE]ThrowObject",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
-+ActionMappings=(ActionName="[HE]Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Escape)
-+ActionMappings=(ActionName="[HE]Menu",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=M)
-+ActionMappings=(ActionName="[HE]Quickload",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=F9)
-+AxisMappings=(AxisName="[HE]Turn",Scale=1.000000,Key=MouseX)
-+AxisMappings=(AxisName="[HE]Turn",Scale=1.000000,Key=Gamepad_RightX)
-+AxisMappings=(AxisName="[HE]LookUp",Scale=-1.000000,Key=MouseY)
-+AxisMappings=(AxisName="[HE]LookUp",Scale=-1.000000,Key=Gamepad_RightY)
-+AxisMappings=(AxisName="[HE]MoveForward",Scale=1.000000,Key=W)
-+AxisMappings=(AxisName="[HE]MoveForward",Scale=1.000000,Key=Gamepad_LeftY)
-+AxisMappings=(AxisName="[HE]MoveForward",Scale=-1.000000,Key=S)
-+AxisMappings=(AxisName="[HE]MoveRight",Scale=-1.000000,Key=A)
-+AxisMappings=(AxisName="[HE]MoveRight",Scale=-1.000000,Key=Gamepad_LeftX)
-+AxisMappings=(AxisName="[HE]MoveRight",Scale=1.000000,Key=D)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
 DefaultInputComponentClass=/Script/EnhancedInput.EnhancedInputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
